# PotPlayer-.md

./: LICENSE  README.md
CodeSnips/: Makefile_simple  README.md
CodeSnips/C/: 001-冒泡排序.c  500-输出带颜色的字符.c
ConfigExamples/: CMakeLists.txt  README.md
Notes/: 1001.openSUSE配置.md  1002.VPS安装openSUSE.md  1003.Windows配置.md  1004.WSL配置.md  1005.PotPlayer最强画质配置.md  1006.值得留意的软件及插件.md  1006.值得留意的软件插件仓库.md  1007.RHEL8配置.md  1007.不错的GitHub仓库.md  1008.Rocky8配置.md  1008.RockyLinux8安装笔记.md  1009.Linux全局配置oh-my-zsh.md  1009.RockyLinux8安装笔记.md  1010.Linux全局配置oh-my-zsh.md  1010.Linux常用操作.md  1111.网络书签.md  2000.乱七八糟.md  README.md
